--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 REACT_APP_YT_KEY = 'AIzaSyCAwgEaTzjG_y-TZKgXCCcmROdhoPAWuyI'
 
 
-REACT_APP_BASE_URL = 'https://www.googleapis.com/youtube/v3/';
+REACT_APP_BASE_URL = 'https://www.googleapis.com/youtube/v3/'
