--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "dotenv": "^16.0.1",
     "formik": "^2.2.9",
     "gh-pages": "^4.0.0",
+    "i18next": "^23.14.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-i18next": "^15.0.1",
     "react-iframe": "^1.8.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
